	2011-07-15 (T.S.):

	* configure.ac, config.c: added configure option to enable unified
	work area.

	2011-07-15 (T.S.):

	* cexp-txtregion.c: declare BSP_sbrk_policy as uintptr_t.

	2011-07-15 (T.S.):
	
	* configure.ac: added 'qemuprep' BSP.

	2011-03-17 (T.S.):

	* Makefile.am: add ldep/ to EXTRA_DIST

	2011-02-23 (T.S.):

	* config.c: include <bsp.h> so that BSP-specific idle task (e.g. uC5282)
	is picked up by <confdefs.h>.

	2011-02-03 (T.S.):

	* config.c: added idle task body for qemu selecting sleep mode so
	that host OS doesn't spin (IIRC requires qemu patch since MSR_POW
	is not handled correctly by qemu).

	It's CONFIGURE_FILESYSTEM_NFS (not NFSFS) after all.

	* configure.ac:
	 o select use MEMORY_HUGE for qemu also
	 o set RTEMS_CEXP_TEXT_REGION_SIZE for psim also.
	 o moved libbsdport check away from pcx86 specific section into
	   generic flow of the script.

	* m4/rtems-bsp-postlink.m4: Use PReP bootloader for qemu also.

	* nvram/pairxtract.c: Skip options (stuff starting with '-').

	2010-12-14 (T.S.):

	* configure.ac: default NIC name for mvme2xxx must be 'dc1', not 'dc0'.

	2010-10-05 (T.S.):

	* README.addpath, addpath.c: added comments describing new
	%P substitution.

	2010-10-05 (T.S.):

	* addpath.c: Added %P (cwd) substitution to 'pathSubstitute()'
	(suggestion by K. Luchini).

	BUGFIX: 'stringSubstitute()' failed to add terminal 'NUL' to 
	generated string.

	Dynamically allocate storage for getcwd() buffer.

	2010-10-05 (T.S.):

	* README.addpath: added README.addpath describing addpath & friends.

	2010-06-30 (T.S.):

	* configure.ac: Check for nfsInit rather than nfsMount when looking for
	bundled NFS support (nfsMount is gone from rtems-4.10).

	* Makefile.am: Base BSP specific files and CPPFLAGS on RTEMS_BSP_CLASS
	rather than the RTEMS_BSP.

	* bug_disk.c: Silence compiler warning (rtems-4.10) by including
	<unistd.h>

	* config.c, init.c: definition CONFIGURE_FILESYSTEM_TFTPFS and