@@ -161,6 +161,7 @@ static struct rtems_bsdnet_ifconfig netdriver_config[1] = {{
 #endif
 #endif
 
+#ifdef HAVE_RTEMS_BSDNET_LOOPATTACH
 extern void rtems_bsdnet_loopattach();
 static struct rtems_bsdnet_ifconfig loopback_config = {
     "lo0",                          /* name */
@@ -173,9 +174,18 @@ static struct rtems_bsdnet_ifconfig loopback_config = {
     "127.0.0.1",                    /* IP address */
     "255.0.0.0",                    /* IP net mask */
 };
+#endif
 
 struct rtems_bsdnet_config rtems_bsdnet_config = {
+
+#ifdef HAVE_RTEMS_BSDNET_LOOPATTACH
     &loopback_config,         /* Network interface */
+#elif defined(NIC_NAME)
+	netdriver_config,
+#else
+	0,
+#endif
+
 #ifdef NIC_NAME
     RTEMS_DO_BOOTP,           /* Use BOOTP to get network configuration */
 #else
